--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 # mlterm
-challenge
+/.mlterm/challenge
+*challenge*
 *.log
+.mlterm/challenge
+.mlterm/challenge
+.mlterm/challenge
+.mlterm/challenge
+.mlterm/challenge
+.mlterm/challenge
+.mlterm/challenge
+.mlterm/challenge
