--- a/atuin/config.toml
+++ b/atuin/config.toml
@@ -14,35 +14,35 @@
 # session_path = "~/.session"
 
 ## date format used, either "us" or "uk"
- dialect = "uk"
+# dialect = "us"
 
 ## default timezone to use when displaying time
 ## either "l", "local" to use the system's current local timezone, or an offset
 ## from UTC in the format of "<+|->H[H][:M[M][:S[S]]]"
 ## for example: "+9", "-05", "+03:30", "-01:23:45", etc.
- timezone = "local"
+# timezone = "local"
 
 ## enable or disable automatic sync
- auto_sync = true
+# auto_sync = true
 
 ## enable or disable automatic update checks
- update_check = true
+# update_check = true
 
 ## address of the sync server
- sync_address = "https://api.atuin.sh"
+# sync_address = "https://api.atuin.sh"
 
 ## how often to sync history. note that this is only triggered when a command
 ## is ran, so sync intervals may well be longer
 ## set it to 0 to sync after every command
- sync_frequency = "5m"
+# sync_frequency = "10m"
 
 ## which search mode to use
 ## possible values: prefix, fulltext, fuzzy, skim
- search_mode = "fuzzy"
+# search_mode = "fuzzy"
 
 ## which filter mode to use
 ## possible values: global, host, session, directory
- filter_mode = "global"
+# filter_mode = "global"
 
 ## With workspace filtering enabled, Atuin will filter for commands executed
 ## in any directory within a git repository tree (default: false)
@@ -203,4 +203,3 @@ enter_accept = true
 # This ensures that sync v2 is enabled for new installs only
 # In a later release it will become the default across the board
 records = true
-
