--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -6,7 +6,7 @@ standard_dialogs=default
 style=Fusion
 
 [Fonts]
-fixed=@Variant(\0\0\0@\0\0\0 \0\x46\0i\0r\0\x61\0 \0\x43\0o\0\x64\0\x65\0 \0M\0\x65\0\x64\0i\0u\0m@&\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x39\x10)
+fixed=@Variant(\0\0\0@\0\0\0 \0\x46\0i\0r\0\x61\0 \0\x43\0o\0\x64\0\x65\0 \0R\0\x65\0t\0i\0n\0\x61@&\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x35\x10)
 general=@Variant(\0\0\0@\0\0\0\n\0I\0n\0t\0\x65\0r@&\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0?\x10)
 
 [Interface]
