modified:   config.toml 	modified:   language.toml

--- a/.config/helix/language.toml
+++ b/.config/helix/language.toml
@@ -3,8 +3,8 @@
 
 [[language]]
 name = "julia"
-# julia -e 'using Pkg; Pkg.add("LanguageServer")'
-# julia -e 'using Pkg; Pkg.update()'
+julia -e 'using Pkg; Pkg.add("LanguageServer")'
+julia -e 'using Pkg; Pkg.update()'
 scope = "source.julia"
 injection-regex = "julia"
 file-types = ["jl"]
