--- a/.gitconfig
+++ b/.gitconfig
@@ -29,14 +29,24 @@
     navigate = true    # use n and N to move between diff sections
 	side-by-side = true
     # delta detects terminal colors automatically; set one of these to disable auto-detection
-    # dark = true
+    dark = true
     # light = true
 
 [merge]
     conflictstyle = diff3
 
 [diff]
-    colorMoved = default
+#    colorMoved = default
+	tool = difftastic
 
+[difftool]
+    prompt = false
+
+[difftool "difftastic"]
+    cmd = difft "$LOCAL" "$REMOTE"
+
+[pager]
+    difftool = true
+	
 [pull]
 	rebase = false
